# Crown

./: .gitignore  cargo.toml  changelog.md  license  readme.md
.github/workflows/: build.yml
.tokeny/: manifest.json
crates/app/: cargo.toml  tauri.conf.json
crates/app/bundled-skills/api-tester/: skill.md
crates/app/bundled-skills/code-review/: skill.md
crates/app/bundled-skills/db-helper/: skill.md
crates/app/bundled-skills/deep-research/: SKILL.md
crates/app/bundled-skills/file-reader/: skill.md
crates/app/bundled-skills/git-helper/: skill.md
crates/app/bundled-skills/image-analyzer/: skill.md
crates/app/bundled-skills/refactoring/: skill.md
crates/app/bundled-skills/terminal-wizard/: skill.md
crates/app/bundled-skills/translator/: skill.md
crates/app/bundled-skills/web-research/: SKILL.md
crates/app/capabilities/: default.json
crates/app/src/: dto.rs  events.rs  gate_impl.rs  main.rs  question_gate_impl.rs  subagent.rs  webview_memory.rs
crates/app/src/commands/: balance.rs  brainstorm.rs  config.rs  fs.rs  hooks.rs  mcp.rs  messages.rs  mod.rs  models.rs  output_styles.rs  permissions.rs  polish.rs  projects.rs  pty.rs  questions.rs  rewind.rs  skill.rs  stats.rs  threads.rs
crates/client/: Cargo.toml
crates/client/src/: deepseek.rs  lib.rs  retry.rs  streaming.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: abort.rs  compaction.rs  context.rs  engine.rs  gate.rs  hooks.rs  lib.rs  memory.rs  paths.rs  prompt.rs  repair.rs  rewind.rs  skills.rs  thread.rs
crates/core/src/permission/: check.rs  context.rs  mod.rs  mode_cycle.rs  settings.rs
crates/core/src/pricing/: anthropic.rs  deepseek.rs  mod.rs  openai.rs  overrides.rs
crates/core/src/subagent/: mod.rs  types.rs
crates/core/tests/: agent_alignment_tests.rs  engine_live_test.rs  fold_dataflow_test.rs  fold_live_test.rs  fold_trigger_live_test.rs  live_ask_user_question_test.rs  live_memory_test.rs  live_skill_test.rs  live_subagent_test.rs  pricing_deepseek_test.rs  pricing_override_test.rs  rewind_test.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: bridge.rs  config.rs  connection.rs  install_tools.rs  lib.rs  manager.rs  naming.rs  types.rs
crates/mcp/tests/: live_engine_mcp_test.rs  live_stdio_test.rs  live_yolo_provision_test.rs
crates/skill/: Cargo.toml
crates/skill/src/: discovery.rs  frontmatter.rs  lib.rs  loader.rs
crates/state/: Cargo.toml
crates/state/benches/: state_perf.rs
crates/state/src/: db.rs  lib.rs  schema.rs  schema.sql
crates/state/src/repo/: checkpoints.rs  file_history.rs  messages.rs  mod.rs  projects.rs  threads.rs  tool_trace.rs  usage.rs
crates/state/tests/: checkpoints_test.rs  messages_test.rs  schema_test.rs  threads_test.rs  usage_test.rs
crates/tokenizer/: Cargo.toml
crates/tokenizer/src/: bpe.rs  lib.rs  template.rs  types.rs
crates/tools/: Cargo.toml
crates/tools/benches/: grep_perf.rs
crates/tools/src/: ask_user_question.rs  context.rs  edit_match.rs  file_rule_matching.rs  file_state.rs  filesystem.rs  glob_tool.rs  grep.rs  lib.rs  permission.rs  registry.rs  rule_parser.rs  safety.rs  shell.rs  shell_rule_matching.rs  skill_tool.rs  specs.rs  task_tool.rs  todo.rs  types.rs
crates/tools/src/web/: config.rs  fetch.rs  mod.rs  search.rs
frontend/: .gitignore  index.html  package-lock.json  package.json  readme.md  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/e2e/: README.md  lib.mjs  probe-buttons.mjs  probe-cdp.mjs  probe-console.mjs  probe-state.mjs  probe-store.mjs  probe-testids.mjs  run-e2e.mjs  smoke.mjs  unstick.mjs
frontend/e2e/harness/: launch.ts
frontend/e2e/specs/: p0-tool-card-restore.mjs  p1-abort.mjs  p2-rewind.mjs  p3-slash-plan.mjs  p4-subagent.mjs  p5-output-styles.mjs
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/api/: AgentClient.ts  HybridClient.ts  agentclient.ts  assertShape.ts  contracts.ts  devtools.ts  hybridclient.ts  index.ts  status.ts
frontend/src/api/mock/: MockAgentClient.ts  data.ts  mockagentclient.ts
frontend/src/api/tauri/: TauriAgentClient.ts  tauriagentclient.ts
frontend/src/app/: App.tsx  AppShell.tsx  ErrorBoundary.tsx
frontend/src/features/chat/: ApprovalPanel.tsx  AssistantMessage.tsx  BrainstormDiscussion.tsx  ChatPage.tsx  CodeBlock.tsx  ComposeBar.tsx  ComposerModeSelector.tsx  ComposerModelSelector.tsx  DiffView.tsx  MarkdownRenderer.tsx  MessageList.tsx  MessageMeta.tsx  MessageScrubber.tsx  (+19 more)
frontend/src/hooks/: useTauriEvents.ts
frontend/src/stores/: balancestore.ts.removed  chatStore.ts  chatstore.ts  projectStore.ts  routerStore.ts  sessionStore.ts  settingsStore.ts  uiStore.ts  workspaceStore.ts
frontend/src/styles/: index.css  tokens.css
(+61 files in other folders)
