[package]
name = "deepseek-client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
async-stream = "0.3"
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["io"] }
tracing.workspace = true

base64 = "0.22"
