[package]
name = "deepseek-skill"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
serde.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
