[package]
name = "deepseek-tools"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
deepseek-client = { path = "../client" }
deepseek-skill = { path = "../skill" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "fs"] }
tracing.workspace = true
regex.workspace = true
ignore.workspace = true
globset.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
walkdir.workspace = true
dirs.workspace = true
reqwest.workspace = true
scraper.workspace = true
url.workspace = true
lru.workspace = true
urlencoding = "2"
parking_lot.workspace = true
tokio-util.workspace = true
similar.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[dev-dependencies]
tempfile = "3"

# Benchmark-only (criterion is the Rust-standard microbenchmark harness).
[dev-dependencies.criterion]
version = "0.5"
default-features = false
features = ["cargo_bench_support"]

[[bench]]
name = "grep_perf"
harness = false
path = "benches/grep_perf.rs"
